--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css?family=Orbitron&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://video-react.github.io/assets/video-react.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
