--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link
-      href="https://fonts.googleapis.com/css?family=Orbitron&display=swap"
+      href="https://fonts.googleapis.com/css?family=Orbitron:400,700,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
 
